--- a/assets/css/cha_detail.css
+++ b/assets/css/cha_detail.css
@@ -151,8 +151,36 @@
 }
 
 .character-name {
-    margin: 16px 0 8px 0;
+    margin: 12px 8px 12px 0;
     color: rgb(255, 255, 255, 0.95);
+    position: relative;
+}
+
+@keyframes subtle-liquid-name {
+    0% { clip-path: polygon(0% 2%, 99% 2%, 94% 49%, 4% 54%);}
+    10% { clip-path: polygon(1% 1%, 98% 4%, 93% 50%, 5% 55%);}
+    20% { clip-path: polygon(-1% 3%, 100% 5%, 95% 48%, 3% 53%);}
+    30% { clip-path: polygon(0% 3%, 98% 2%, 93% 50%, 5% 55%);}
+    40% { clip-path: polygon(1% 1%, 99% -1%, 95% 48%, 4% 53%);}
+    50% { clip-path: polygon(0% 0%, 100% 2%, 93% 50%, 3% 55%);}
+    60% { clip-path: polygon(-1% 3%, 98% 1%, 94% 48%, 5% 54%);}
+    70% { clip-path: polygon(1% 2%, 99% -1%, 95% 50%, 4% 55%);}
+    80% { clip-path: polygon(0% 1%, 100% 2%, 93% 48%, 3% 53%);}
+    90% { clip-path: polygon(-1% 3%, 98% 4%, 94% 50%, 5% 55%);}
+    100% { clip-path: polygon(0% 2%, 99% 0%, 94% 49%, 4% 54%);}
+  }
+
+h1.character-name::before {
+    content: "";
+    background: #c10000;
+    position: absolute;
+    top: 38%;
+    left: -5%;
+    width: 110%;
+    height: 110%;
+    z-index: -1;
+    clip-path: polygon(0% 2%, 99% 0%, 94% 49%, 4% 54%);
+    animation: subtle-liquid-name 3s infinite linear;
 }
 
 /* 이름 스켈레톤 플레이스홀더 */
@@ -193,9 +221,11 @@
 
 .code-name>span:not(.label),
 .persona-name>span:not(.label) {
-    color: rgba(255, 255, 255, 0.9);
+    color: rgba(255, 255, 255, 0.95);
     font-weight: 600;
+    position: relative;
 }
+
 
 .name-row2 {
     display: flex;
@@ -239,6 +269,7 @@
     box-shadow: 4px 4px 0 rgba(0,0,0,0.5);
     overflow: hidden;
     position: relative;
+    margin-left: 4px;
 }
 
 .character-video-stage {
@@ -321,8 +352,8 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    width: 34px;
-    height: 34px;
+    width: 24px;
+    height: 24px;
     border-radius: 999px;
     border: 2px solid rgba(255,255,255,0.5);
     background: rgba(0,0,0,0.45);
@@ -373,7 +404,7 @@
     background: rgba(255,255,255,0.95);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
     .character-video {
         width: calc(100% - 32px);
         margin-left: auto;
@@ -1205,6 +1236,12 @@ h2 {
     }
 }
 
+@media(max-width: 768px){
+    .skills-grid {
+        grid-template-columns: 1fr;
+    }
+}
+
 /* mobile responsive */
 @media (max-width: 1200px) {
 
@@ -1285,10 +1322,6 @@ h2 {
 
     .stat-grid {
         grid-template-columns: repeat(2, 1fr);
-    }
-
-    .skills-grid {
-        grid-template-columns: 1fr;
     }
 
     .skill-card {
